# Prog4-GameEngine-Bomberman

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
BombermanGame/: Achievements.h  BombermanGame.cpp  BombermanGame.h  CMakeLists.txt  EnemyArchetypes.cpp  EnemyArchetypes.h  EnemyType.h  GameEvents.h  HighScoreList.cpp  HighScoreList.h  LevelBuilder.cpp  LevelBuilder.h  LevelGrid.cpp  LevelGrid.h  LevelLoader.cpp  LevelLoader.h  Main.cpp  PowerupArchetypes.cpp  PowerupArchetypes.h  PowerupEffects.cpp  PowerupEffects.h  PowerupType.h  SoundIds.h  SoundManager.cpp  SoundManager.h  SpawnUtils.cpp  SpawnUtils.h  StageLoader.cpp  StageLoader.h  Utils.cpp  Utils.h
BombermanGame/Commands/: ConfirmSelectionCommand.cpp  ConfirmSelectionCommand.h  DamageCommand.h  HoverSelectableCommand.cpp  HoverSelectableCommand.h  LayBombCommand.cpp  LayBombCommand.h  MoveCommand.cpp  MoveCommand.h  RemoteBombDetonateCommand.cpp  RemoteBombDetonateCommand.h  ScoreCommand.cpp  ScoreCommand.h  SkipGameplayStageCommand.cpp  SkipGameplayStageCommand.h  SwitchToGameplaySceneCommand.cpp  SwitchToGameplaySceneCommand.h  SwitchToGameplayStateCommand.cpp  SwitchToGameplayStateCommand.h  SwitchToMainMenuCommand.cpp  SwitchToMainMenuCommand.h  SwitchToTransitionStateCommand.cpp  ToggleMuteCommand.cpp  ToggleMuteCommand.h
BombermanGame/Components/: BombComponent.cpp  BombComponent.h  BombLayerComponent.cpp  BombLayerComponent.h  BreakableWallComponent.cpp  BreakableWallComponent.h  CameraPlayerFollowComponent.cpp  CameraPlayerFollowComponent.h  EnemyComponent.cpp  EnemyComponent.h  ExplosionComponent.cpp  ExplosionComponent.h  HealthDisplayComponent.cpp  HealthDisplayComponent.h  PlayerComponent.cpp  PlayerComponent.h  PowerupComponent.cpp  PowerupComponent.h  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h  SelectableTextComponent.cpp  SelectableTextComponent.h
BombermanGame/EnemyStates/: BaseEnemyState.cpp  BaseEnemyState.h  ChaseState.cpp  ChaseState.h  RunState.cpp  RunState.h  WanderState.cpp  WanderState.h
BombermanGame/GameStates/: GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  GameplayState.cpp  GameplayState.h  HighScoresState.cpp  HighScoresState.h  LossState.cpp  LossState.h  MainMenuState.cpp  MainMenuState.h  PlayerModeState.cpp  PlayerModeState.h  StageTransitionState.cpp  StageTransitionState.h  TypeNameState.cpp  TypeNameState.h  VictoryState.cpp  VictoryState.h
BombermanGame/Services/: SDLSoundSystem.cpp  SDLSoundSystem.h  SoundIds.h
BombermanGame/StateMachine/: BaseEnemyState.cpp  ChaseState.cpp  ChaseState.h  RunState.cpp  RunState.h  WanderState.cpp  WanderState.h
GameEngine/: Achievements.cpp  Achievements.h  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  EngineEvents.h  Event.cpp  Event.h  FPSComponent.cpp  FPSComponent.h  Font.cpp  Font.h  GameEngine.cpp  GameEngine.h  GameEvents.h  GameObject.cpp  GameObject.h  HealthObserver.cpp  HealthObserver.h  IGameApplication.h  ISelectable.h  ISelectableNavigator.h  ImGuiScene.cpp  ImGuiScene.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Main.cpp  ObservableSubject.cpp  ObservableSubject.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Renderer.cpp  (+21 more)
GameEngine/Commands/: ChangeWindowSizeCommand.cpp  ChangeWindowSizeCommand.h  Command.h  ConditionalCommand.cpp  ConditionalCommand.h  DamageCommand.cpp  DamageCommand.h  GameObjectCommand.h  MoveCommand.cpp  MoveCommand.h  MoveStickCommand.cpp  MoveStickCommand.h  ScoreCommand.cpp  ScoreCommand.h
GameEngine/Components/: AnimatorComponent.cpp  AnimatorComponent.h  CameraFollowComponent.cpp  CameraFollowComponent.h  Colliders.cpp  Colliders.h  Component.h  FPSComponent.cpp  FPSComponent.h  FSMComponent.cpp  FSMComponent.h  HealthComponent.cpp  HealthComponent.h  HealthDisplayComponent.cpp  HealthDisplayComponent.h  Image.cpp  Image.h  PlayerComponent.cpp  PlayerComponent.h  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h  TextComponent.cpp  TextComponent.h  TimerDisplayComponent.cpp  TimerDisplayComponent.h  Transform.h
GameEngine/Services/: InputManager.cpp  InputManager.h  LoggingSoundService.cpp  LoggingSoundService.h  NullSoundSystem.h  SDLSoundSystem.cpp  SDLSoundSystem.h  ServiceLocator.cpp  ServiceLocator.h  SoundSystem.h
GameEngine/StateMachine/: State.cpp  State.h  Transition.cpp  Transition.h
resources/levels/: mainLevel1.txt
web/: index.html
